# Proj_Mythos

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  DEPLOY.md  README.md  START_HERE.md  docker-compose.prod.yml  docker-compose.yml  env.example  package-lock.json
agents/: __init__.py  solana_borrower_agent.py
backend/api/: attestation.py  server.py
docs/: DEPLOYMENT.md
frontend/Dashboard/: .env.example
frontend/Dashboard/src/: App.tsx
frontend/Dashboard/src/components/dashboard/: AssetTable.tsx  LoanConfigurationForm.tsx  WalletConnection.tsx  WalletConnectionWizard.tsx
frontend/Dashboard/src/data/: mockData.ts
frontend/Dashboard/src/lib/: validation.ts
frontend/Dashboard/src/lib/wallet/: ethereum-wallet.ts
frontend/Dashboard/src/pages/: Portfolio.tsx  Settings.tsx  Transactions.tsx
programs/mythos/: Cargo.toml
programs/mythos/src/: lib.rs
