[package]
name = "mythos"
version = "0.1.0"
description = "Mythos — AI-Native Agentic Lending Protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mythos"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "=0.31.1"
anchor-spl  = { version = "=0.31.1", features = ["token"] }
